// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pinned Renders Pinned component correctly with value 0 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "color": "",
    }
  }
>
  <i
    className="fas fa-thumbtack"
  />
</button>
`;

exports[`Pinned Renders Pinned component correctly with value 1 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "color": "Gold",
    }
  }
>
  <i
    className="fas fa-thumbtack"
  />
</button>
`;
